--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-world-flags": "^1.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-readable-tailwind": "^1.7.0",
