fix: add @tiptap/extension-bubble-menu package and update import
- Install @tiptap/extension-bubble-menu v3.6.6
- Update BubbleMenu import from @tiptap/react to @tiptap/extension-bubble-menu
- Fixes TypeScript error: Module '@tiptap/react' has no exported member 'BubbleMenu'

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.20.1",
+    "@tiptap/extension-bubble-menu": "^3.6.6",
     "@tiptap/extension-code-block-lowlight": "^3.6.6",
     "@tiptap/extension-color": "^3.6.6",
     "@tiptap/extension-heading": "^3.6.6",
